force-app/main/default/objects/OpportunityLineItem/fields/Manual_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Adjustment</label>
    <type>Checkbox</type>
</CustomField>