force-app/main/default/objects/OpportunityLineItem/fields/Product_Line_Months__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Months__c</fullName>
    <formula>if(year(End_Date__c)-year(ServiceDate)=0 &amp;&amp; month(End_Date__c)-month(ServiceDate)= 0,1,(((End_Date__c-ServiceDate)/30.5)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>