force-app/main/default/objects/OpportunityLineItem/fields/YR1_One_Time__c.field-meta.xml
<CustomField>
    <fullName>YR1_One_Time__c</fullName>
    <label>YR1 One-Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>