force-app/main/default/objects/OpportunityLineItem/fields/YR2__c.field-meta.xml
<CustomField>
    <fullName>YR2__c</fullName>
    <description>Used for Revenue Recognition calculations</description>
    <label>YR2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>