force-app/main/default/objects/OpportunityLineItem/fields/YR3__c.field-meta.xml
<CustomField>
    <fullName>YR3__c</fullName>
    <description>Used for Revenue Recognition calculations</description>
    <label>YR3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>